# optimistix

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CUTEST.ipynb  PrimalDual.ipynb  Prototyping.ipynb  README.md  SecondOrder.ipynb  Troubleshooting.ipynb  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: release.yml  run_tests.yml
benchmarks/: Profiles.ipynb  README.md  conftest.py  cutest.py  helpers.py  iter_count.py  johanna.json  levenberg-marquardt.py  profile.py  requirements.txt  script.py  test_benchmarks.py  timing_anderson.py  vmap-unroll.py
benchmarks/cutest/: __init__.py  allinitu.py  arglin.py  argtrigls.py  arwhead.py  bard.py  bdqrtic.py  beale.py  bennett.py  biggs.py  box.py  brkmcc.py  brown.py  broydn.py  bt.py  bt1.py  bt2.py  bt4.py  bt5.py  bt8.py  ceri.py  chainwoo.py  chnrosnb.py  chwirut.py  cliff.py  clusterls.py  coating.py  coolhansls.py  cosine.py  cragglvy.py  cube.py  curly.py  cycloocfls.py  daniwoodls.py  denschn.py  devgla.py  diamon.py  dixon3dq.py  djtl.py  dmn.py  (+56 more)
benchmarks/results/: johanna_test.json
docs/: abstract.md  faq.md  how-to-choose.md  index.md  mix-and-match.md  nonlinear-cg-variants.md  norms.md  requirements.txt
docs/_static/: contour_local_minimum.py  filter_pareto_frontier.py  quadratic_bowl.py  second_order_correction.py  van_der_pol.py
docs/api/: adjoints.md  boundary_maps.md  compat.md  descents.md  fixed_point.md  least_squares.md  line_searches.md  linear_solvers.md  minimise.md  norms.md  progress_meter.md  quadratic.md  root_find.md  solution.md
docs/api/searches/: derivative_info.md  descents.md  function_info.md  introduction.md  searches.md
docs/examples/: Aircraft.ipynb  custom_solver.ipynb  interactive.ipynb  mpc.ipynb  mpc_unrolled_dynamics.ipynb  optimise_diffeq.ipynb  rollout.ipynb  root_find.ipynb  van_der_pol.ipynb
jaxopt/: __init__.py  ad.py  adjoint.py  fixed_point.py  iterate.py  least_squares.py  linear_operator.py  linear_solve.py  minimise.py  misc.py  results.py  root_find.py  str2jax.py  todo.md
jaxopt/internal/: ad.py
jaxopt/solver/: __init__.py  bisection.py  cg.py  cholesky.py  diagonal.py  fixed_point.py  gauss_newton.py  gauss_newton_levenberg_marquardt.py  lu.py  newton.py  newton_chord.py  qr.py  svd.py  triangular.py
optimistix/: __init__.py  _ad.py  _adjoint.py  _base_solver.py  _custom_types.py  _descent.py  _fixed_point.py  _iterate.py  _least_squares.py  _line_search.py  _minimise.py  _misc.py  _progress_meter.py  _quadratic_solve.py  _root_find.py  _search.py  _solution.py  _termination.py  ad.py  adjoint.py  custom_types.py  fixed_point.py  iterate.py  least_squares.py  line_search.py  linear_operator.py  linear_solve.py  linear_tags.py  minimise.py  misc.py  results.py  root_find.py  solution.py  todo.md
optimistix/_linear_solver/: __init__.py  truncated_cg.py
optimistix/_solver/: __init__.py  anderson_accelerated_fixedpoint.py  backtracking.py  barrier.py  best_so_far.py  bfgs.py  bisection.py  boundary_maps.py  bounded_bfgs.py  cauchy_point.py  coleman_li.py  descent.py  dogleg.py  filtered.py  fixed_point.py  gauss_newton.py  golden.py  gradient_methods.py  interior.py  interior_point.py  ipoptlike.py  iterative_dual.py  learning_rate.py  levenberg_marquardt.py  levenberg_marquardt_gauss_newton.py  limited_memory_bfgs.py  misc.py  nelder_mead.py  newton_chord.py  nonlinear_cg.py  nonlinear_cg_descent.py  optax.py  proximal_projected.py  quasi_newton.py  running_min.py  second_order.py  sequential.py  squarem.py  trust_region.py  xdycyd.py  (+1 more)
optimistix/compat/: _impl.py
optimistix/internal/: __init__.py  ad.py
optimistix/search/: __init__.py  backtracking.py  iterative_dual.py  levenberg_marquardt.py  misc.py  models.py  trust_region.py
optimistix/solver/: __init__.py  backtracking.py  bfgs.py  bisection.py  cg.py  cholesky.py  descent.py  diagonal.py  dogleg.py  fixed_point.py  gauss_newton_levenberg_marquardt.py  iterative_dual.py  levenberg_marquard_gauss_newton.py  levenberg_marquardt.py  levenberg_marquardt_gauss_newton.py  lu.py  misc.py  models.py  nelder_mead.py  newton_chord.py  nonlinear_cg.py  nonlinear_cg_descent.py  optax.py  qr.py  quasi_newton.py  running_min.py  svd.py  triangular.py  tridiagonal.py  trust_region.py
tests/: README.md  conftest.py  constrained_problem_helpers.py  helpers.py  requirements.txt  test_ad.py  test_best_so_far.py  test_bisection.py  test_boundary_map.py  test_cauchy_point.py  test_compat.py  test_constrained_solves.py  test_fixed_point.py  test_lbfgs_linear_operator.py  test_least_squares.py  test_linear_operator.py  test_linear_solve.py  test_minimise.py  test_misc.py  test_nonlinear.py  test_problems.py  test_progress_meter.py  test_root_find.py  test_solve.py  test_verbose.py  test_zoom.py
tests/benchmarks/: README.md  helpers.py  test_benchmarks.py  vmap-unroll.py
tests/benchmarks/cutest/: __init__.py  bt1.py  bt2.py  hs35.py  problem.py
