[project]
name = "optimistix"
version = "0.0.10"
description = "Nonlinear optimisation in JAX and Equinox."
readme = "README.md"
requires-python ="~=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Jason Rader", email = "raderjason@outlook.com"},
  {name = "Patrick Kidger", email = "contact@kidger.site"},
]
keywords = [
    "jax",
    "optimization",
    "neural-networks",
    "deep-learning",
    "equinox",
    "nonlinear-programming",
    "numerical-optimization",
    "levenberg-marquardt",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {repository = "https://github.com/patrick-kidger/optimistix" }
dependencies = ["jax>=0.4.38", "jaxtyping>=0.2.24", "lineax>=0.0.6", "equinox>=0.11.11", "typing_extensions>=4.5.0"]

[project.optional-dependencies]
dev = [
  "beartype>=0.20.2",
  "diffrax>=0.7.0",
  "optax>=0.2.4",
  "pyright>=1.1.399",
  "pytest>=8.3.5",
  "pytest-benchmark>=5.1.0",
  "ruff>=0.11.6",
]
docs = [
  "hippogriffe==0.2.1",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "pymdown-extensions==10.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["optimistix/*"]

[tool.pytest.ini_options]
addopts = "-Werror --jaxtyping-packages=optimistix,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["E402", "E721", "E731", "E741", "F722"]
ignore-init-module-imports = true
select = ["E", "F", "I001"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.pyright]
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false  # Incompatible with eqx.AbstractVar
include = ["optimistix", "tests"]
