[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "raderjason@outlook.com", name = "Jason Rader"},
  {email = "contact@kidger.site", name = "Patrick Kidger"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = ["jax>=0.4.38", "jaxtyping>=0.2.24", "lineax>=0.0.6", "equinox>=0.11.11", "typing_extensions>=4.5.0"]
description = "Nonlinear optimisation in JAX and Equinox."
keywords = [
  "jax",
  "optimization",
  "neural-networks",
  "deep-learning",
  "equinox",
  "nonlinear-programming",
  "numerical-optimization",
  "levenberg-marquardt"
]
license = {file = "LICENSE"}
name = "optimistix"
readme = "README.md"
requires-python = "~=3.10"
urls = {repository = "https://github.com/patrick-kidger/optimistix"}
version = "0.0.10"

[project.optional-dependencies]
dev = [
  "beartype>=0.20.2",
  "diffrax>=0.7.0",
  "fire>=0.7.0",
  "matplotlib>=3.9.2",
  "optax>=0.2.4",
  "pyright>=1.1.399",
  "pytest>=8.3.5",
  "pytest-benchmark>=5.1.0",
  "ruff>=0.11.6",
  "sif2jax>=0.0.4"
]
docs = [
  "hippogriffe==0.2.2",
  "mkdocs==1.6.1",
  "mkdocs-include-exclude-files==0.1.0",
  "mkdocs-ipynb==0.1.1",
  "mkdocs-material==9.6.7",
  "mkdocstrings==0.28.3",
  "mkdocstrings-python==1.16.8",
  "pymdown-extensions==10.14.3"
]

[tool.hatch.build]
include = ["optimistix/*"]

[tool.pyright]
include = ["optimistix", "tests"]
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = false # Incompatible with eqx.AbstractVar

[tool.pytest.ini_options]
addopts = "-Werror --jaxtyping-packages=optimistix,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On)) --benchmark-skip"

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401", "UP"]
ignore = ["E402", "E721", "E731", "E741", "F722", "UP038"]
ignore-init-module-imports = true
select = ["E", "F", "I001", "UP"]
src = []

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false
